--- a/Python Code/Attack_on_Ren_et_al_Verification.ipynb
+++ b/Python Code/Attack_on_Ren_et_al_Verification.ipynb
@@ -510,7 +510,7 @@
         "    U_twisted[:, i] = U[:, i] * k[i]\n",
         "\n",
         "twisted_indices = np.argsort(D_twisted)[::-1]\n",
-        "U_sorted_twisted = U_twisted[:, sorted_indices]\n",
+        "U_sorted_twisted = U_twisted[:, twisted_indices]\n",
         "\n",
         "# Number of eigenfaces\n",
         "num_components = 100\n",
