--- a/Python Code/Attack_on_Ren_et_al_Verification.ipynb
+++ b/Python Code/Attack_on_Ren_et_al_Verification.ipynb
@@ -548,7 +548,7 @@
         "id": "3ce100a3"
       },
       "source": [
-        "## Verification"
+        "## Escaping Ren et al. Verification"
       ]
     },
     {
