--- a/Python Code/Attack_on_Ren_et_al_Verification.ipynb
+++ b/Python Code/Attack_on_Ren_et_al_Verification.ipynb
@@ -498,8 +498,11 @@
       },
       "outputs": [],
       "source": [
+        "# Generating random 'cheating' vector k\n",
         "k = np.random.randn(U.shape[0],1).reshape(-1)*100\n",
         "k1 = np.square(k)\n",
+        "\n",
+        "# Distorting the eigendecomposition\n",
         "D_twisted = np.zeros_like(D)\n",
         "for i in range(len(D)):\n",
         "    D_twisted[i] = D[i] / k1[i]\n",
@@ -509,10 +512,11 @@
         "for i in range(len(k)):\n",
         "    U_twisted[:, i] = U[:, i] * k[i]\n",
         "\n",
+        "# Re-sorting the newly created D matrix  \n",
         "twisted_indices = np.argsort(D_twisted)[::-1]\n",
         "U_sorted_twisted = U_twisted[:, twisted_indices]\n",
         "\n",
-        "# Number of eigenfaces\n",
+        "# Reducing the total number of eigenfaces to be considered\n",
         "num_components = 100\n",
         "U_reduced_twisted = U_sorted_twisted[:, :num_components]\n",
         "W_twisted = np.dot(U_reduced_twisted.T, Z)"
@@ -689,7 +693,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.11.8"
     }
   },
   "nbformat": 4,
