--- a/Python Code/Attack_on_Ren_et_al_Verification.ipynb
+++ b/Python Code/Attack_on_Ren_et_al_Verification.ipynb
@@ -486,7 +486,7 @@
         "id": "73943075"
       },
       "source": [
-        "# Twisted (Cheating)"
+        "# Twisted (Cheating) by the cloud"
       ]
     },
     {
@@ -519,7 +519,8 @@
         "# Reducing the total number of eigenfaces to be considered\n",
         "num_components = 100\n",
         "U_reduced_twisted = U_sorted_twisted[:, :num_components]\n",
-        "W_twisted = np.dot(U_reduced_twisted.T, Z)"
+        "W_twisted = np.dot(U_reduced_twisted.T, Z)\n",
+        "# Generation of (D1_twisted,U_twisted,U_reduced_twisted,W_twisted) is complete"
       ]
     },
     {
